--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-   <h1 class="text-5xl text-center mt-6">Wellcome To <span class="font-semibold text-violet-600">Baper Bank!!!</span></h1> 
+ <header>
+    <h1 class="text-5xl text-center mt-6">Wellcome To <span class="font-semibold text-violet-600">Bap-Er Bank!!!</span></h1>
+ </header> 
+
+ <main>
+    <section class="bg-blue-100 w-9/12 mx-auto my-12 p-8">
+        <h3 class="text-3xl font-medium mb-5 ">Please Login</h3>
+        <form >
+            
+            <input class="w-9/12 block p-3 mb-3" type="email" name="email" id="" placeholder="your E-mail">
+<input class="w-9/12 block p-3" type="password" name="" id="password" placeholder="your Password"><br>
+<button class="bg-amber-300 px-8 py-3 text-white font-medium rounded-lg text-left hover:bg-sky-700" type="submit">Login</button>
+
+        </form>
+    </section>
+ </main>
 </body>
 </html>
