--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
 
                <div class="w-9/12">
                 <h3 class="text-3xl font-medium mb-5 ">Please Login</h3>
-                <input class="w-9/12 block p-3 mb-3" type="email" name="email" id="" placeholder="your E-mail">
+                <input class="w-9/12 block p-3 mb-3" type="email" name="email" id="email" placeholder="your E-mail">
                 <input class="w-9/12 block p-3" type="password" name="" id="password" placeholder="your Password"><br>
-                <button class="bg-amber-300 px-8 py-3 text-white font-medium rounded-lg text-left hover:bg-sky-700"
-                    type="submit">Login</button>
+                <button id="login" class="bg-amber-300 px-8 py-3 text-white font-medium rounded-lg text-left hover:bg-sky-700"
+                    >Login</button>
                </div>
 
             </form>
         </section>
     </main>
+    <!-- add js -->
+    <script src="js/login.js"></script>
 </body>
 
 </html>
