--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Bank Project</title>
     <!-- add tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+
+.bg-success{
+   margin: .5rem 0; 
+   padding: .5rem 0; 
+   background: #ddffdd;
+   border-left: 6px solid #04aa6d;
+}
+.bg-danger{
+   margin: .5rem 0; 
+   padding: .5rem 0; 
+   background: #ffdddd;
+   border-left: 6px solid #a44436;
+}
+
+    </style>
 </head>
 
 <body>
@@ -17,6 +34,7 @@
     </header>
 
     <main class="">
+        
         <section class="bg-blue-100 w-9/12 mx-auto my-12 p-8 rounded-lg">
            
             <form class="flex align-center justify-center" >
@@ -27,6 +45,7 @@
                 <input class="w-9/12 block p-3" type="password" name="" id="password" placeholder="your Password"><br>
                 <button id="login" class="bg-amber-300 px-8 py-3 text-white font-medium rounded-lg text-left hover:bg-sky-700"
                     >Login</button>
+                    <p id="massage"></p>
                </div>
 
             </form>
