--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <input class="w-9/12 block p-3" type="password" name="" id="password" placeholder="your Password"><br>
                 <button id="login" class="bg-amber-300 px-8 py-3 text-white font-medium rounded-lg text-left hover:bg-sky-700"
                     >Login</button>
-                    <p id="massage"></p>
+                    <p class="text-gray-700" id="massage"></p>
                </div>
 
             </form>
