--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 Bank!!!</span></h1>
     </header>
 
-    <main class="">
+    <main>
         
         <section class="bg-blue-100 w-9/12 mx-auto my-12 p-8 rounded-lg">
            
