--- a/bank.html
+++ b/bank.html
@@ -19,18 +19,18 @@
            
             <div class="cards grid grid-cols-3 gap-4 rounded-lg">
 
-                <div class="card bg-pink-400 py-8 align-center rounded-lg">
-                    <h4 class="text-center text-3xl font-medium">Balance</h4>
-                    <h3 class="text-5xl text-center">$0</h3>
+                <div class="card bg-pink-400 py-8 align-center rounded-lg ">
+                    <h4 class="text-center text-3xl font-medium text-white">Diposit</h4>
+                    <h3 class="text-5xl text-center text-white">$0</h3>
                 </div>
                 <div class="card bg-slate-400 py-8 align-center rounded-lg">
-                    <h4 class="text-center text-3xl font-medium">Balance</h4>
-                    <h3 class="text-5xl text-center">$0</h3>
+                    <h4 class="text-center text-3xl font-medium text-white">Withdraw</h4>
+                    <h3 class="text-5xl text-center text-white">$0</h3>
                 </div>
 
                 <div class="card bg-violet-400 py-8 align-center rounded-lg">
-                    <h4 class="text-center text-3xl font-medium">Balance</h4>
-                    <h3 class="text-5xl text-center">$0</h3>
+                    <h4 class="text-center text-3xl font-medium text-white">Balance</h4>
+                    <h3 class="text-5xl text-center text-white">$0</h3>
                 </div>
             </div>
           
