--- a/bank.html
+++ b/bank.html
@@ -9,11 +9,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header>
+    <header class="mb-4">
         <h1 class="text-5xl text-center mt-6">Get Some <span class="font-semibold text-violet-600">Moooooooneeeeeyyyy</span></h1>
     </header> 
 
-    <main>
+    <main class="bg-blue-100 container mx-auto pb-2 mb-5">
         
         <section class="bg-blue-100 w-9/12 mx-auto my-12 py-10 px-5 rounded-lg">
            
